Please list items to be added to the final release comment here

New Features

Upgrades, Improvements and Bugfixes
- SELECT fields in workflows now support dependent fields (fields only shown if a specific option is selected)

Removals, Deprecations, Breaking Changes