@@ -6,3 +6,4 @@ Upgrades, Improvements and Bugfixes
 - SELECT fields in workflows now support dependent fields (fields only shown if a specific option is selected)
 
 Removals, Deprecations, Breaking Changes
+- Config fallback from simplereenroll to simpleenroll in EST is deprecated and will be removed in next release
